--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.html",
   "scripts": {
     "start": "python -m http.server 8000",
-    "test": "open test.html",
-    "demo": "open demo.html"
+    "test": "node test.js",
+    "demo": "node -e \"console.log('Open demo.html in a browser')\""
   },
   "keywords": [
     "music",
