--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   "author": "Musical Accompanist Tool",
   "license": "MIT",
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "tone": "^14.8.49"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/yourusername/musical-accompanist-tool.git"
